--- a/ThePost/View/Templates/login.twig
+++ b/ThePost/View/Templates/login.twig
@@ -15,8 +15,10 @@
                 <label for="username" class="control-label">Username</label>
 
                 <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>
-                    <input type="text" class="form-control" id="username" name="username" value="" required title="Please enter you username" placeholder="example@gmail.com">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-user"
+                                                          aria-hidden="true"></span></span>
+                    <input type="text" class="form-control" id="username" name="username" value="" required
+                           title="Please enter you username" placeholder="example@gmail.com">
                 </div>
                 <span class="help-block"></span>
             </div>
@@ -24,8 +26,10 @@
                 <label for="password" class="control-label">Password</label>
 
                 <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
-                    <input type="password" class="form-control" id="password" name="password" value="" required title="Please enter your password">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"
+                                                          aria-hidden="true"></span></span>
+                    <input type="password" class="form-control" id="password" name="password" value="" required
+                           title="Please enter your password">
                 </div>
                 <span class="help-block"></span>
             </div>
