--- a/ThePost/View/Templates/preview.twig
+++ b/ThePost/View/Templates/preview.twig
@@ -17,7 +17,7 @@
     <article class="element entry clearfix" id="entry-0">
         {% endif %}
 
-        {% if authentication.login %}
+        {% if access.edit %}
             <header class="clearfix">
                 <a href="/edit/entry/{{ entry.id }}" class="btn btn-default pull-left" role="button">
                     <span class="glyphicon glyphicon-pencil"></span>
