--- a/ThePost/View/Templates/entry.twig
+++ b/ThePost/View/Templates/entry.twig
@@ -51,7 +51,7 @@
     {% endblock %}
 
     {% block scripts %}
-    <script src="/ThePost/View/Templates/js/upload.min.js"></script>
+    <script src="/ThePost/View/Templates/js/upload.js"></script>
     <script src="/ThePost/View/Templates/js/summernote.min.js"></script>
     <script>
         $(document).ready(function () {
