--- a/ThePost/View/Templates/register.twig
+++ b/ThePost/View/Templates/register.twig
@@ -5,8 +5,8 @@
     <form action="/register/submit/" method="post" role="form" class="element">
         <h2>Register</h2>
 
-        {% if error.true %}
-            <p class="alert alert-danger">{{ error.msg|raw }}</p>
+        {% if register.failed %}
+            <p class="alert alert-danger">Sorry, username or email already used!</p>
         {% endif %}
 
         <div class="form-group">
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" name="register">Register</button>
     </form>
 
 {% endblock %}
